--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>login</title>
-</head>
-<body>
+<div class="border" data-bind="with: category">
+    <div >
+        <div data-bind="text: name"></div>
+    </div>
+    
+    <div>
+        <button data-bind="click:loginBtn" >Login</button>
+    </div>
+</div>
 
-
-</body>
-</html>
