--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -1,10 +1,10 @@
 <div class="border" data-bind="with: category">
     <div >
-        <div data-bind="text: name"></div>
+        <div data-bind="text: login"></div>
     </div>
     
     <div>
-        <button data-bind="click:loginBtn" >Login</button>
+        <button data-bind="click:loginBtn" >login</button>
     </div>
 </div>
 
