--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -1,5 +1,5 @@
 <div>
     <ul data-bind="foreach: titles">
-        <li data-bind="text: PrimaryTitle"></li>
+        <li data-bind="text: name"></li>
     </ul>
 </div>    
