--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -11,8 +11,8 @@
 </svg> </span>
     
     <div class="userInfo">
-        
-        
+        <text data-bind="textInput: firstName"></text>
+        <text data-bind="textInput: lastName"></text>
         
     </div>
     
