drop down login

--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -3,8 +3,18 @@
         <div data-bind="text: login"></div>
     </div>
     
-    <div>
-        <button data-bind="click:loginBtn" >login</button>
+    <div class ="dropdownlogin">
+        <button onclick = "loginFunction()" class="dropBtn">DropDown</button>
+        <div id = "dropdownLogin" class = "dropdown-content">
+        <button href="#">Register</button>
+            <button href="#">Sign In</button>
+        </div>
     </div>
+   <!--- <div>
+        <button data-bind="click:loginBtn" >Login</button>
+    </div>
+<div>
+    <button data-bind="click:signInBtn">Sign In</button>
+</div>-->
 </div>
 
