drop down login

--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -4,9 +4,9 @@
     </div>
     
     <div class ="dropdownlogin">
-        <button onclick = "loginFunction()" class="dropBtn">DropDown</button>
+        <button onclick = "loginFunction()" class="dropBtn">Login</button>
         <div id = "dropdownLogin" class = "dropdown-content">
-        <button href="#">Register</button>
+        <button data-bind="click:loginBtn">Register</button>
             <button href="#">Sign In</button>
         </div>
     </div>
