--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -17,14 +17,13 @@
     </div>
     </div>
     
-<!--</script>-->
+<!--</script>
 
 <script type="text/html" id="user-list">
 <button data-bind="click: createUser">Register1</button>
     
-</script>
+</script>-->
 <div>
-    <button data-bind="click:hello">hello</button>
     <button data-bind="click:signInBtn ">Sign In</button>
 </div>
 <!--</div>-->
