Switching between login and user component works

--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -1,4 +1,4 @@
-<div class="content-container, user-container">
+<div class="component-container, user-container">
     
     
     <span> <svg width="15%" height="15%" viewBox="0 0 16 16" class="bi bi-file-earmark-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
