--- a/Portfolio-2/WebService/wwwroot/css/style.css
+++ b/Portfolio-2/WebService/wwwroot/css/style.css
@@ -5,6 +5,7 @@ body{
     -webkit-font-smoothing: antialiased;
     margin: 1%;
     border: black 1px solid;
+    background-color: dimgrey;
     
 }
 
