--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -3,7 +3,7 @@
     <div data-bind="foreach: titles">
             <div class="row" data-bind="foreach: items">
                 <div class="col-4">
-                    <div data-bind="text: primaryTitle"></div>
+                    <div class="primary_title" data-bind="text: primaryTitle"></div>
                     <img class="img-fluid" data-bind="attr:{src: poster}" />
                 </div>
             </div>
