--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -1,6 +1,13 @@
 <div>
     <div class="container">
-        <h2 data-bind="text: title().primaryTitle">Title details</h2>
+        <div class="row">
+            <div class="col-6">
+                <h2 data-bind="text: title().primaryTitle">Title details (<span data-bind="text: title().startYear"></span>)</h2>
+            </div>
+            <div class="col-6">
+                <button type="button" class="btn btn-primary">Add to bookmarks +</button>
+            </div>
+        </div>
         <div class="row">
             <div class="col-6">
                 <img class="img-fluid" data-bind="attr:{src: title().poster}" />
@@ -22,6 +29,7 @@
                 <p>Writers:</p>
                 <p>Actors:</p>
                 <p data-bind="text: title().plot"></p>
+                <p>Awards: <span data-bind="text: title().awards"></span></p>
             </div>
         </div>
     </div>
