--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -8,7 +8,17 @@
   <path d="M8 12c4 0 5 1.755 5 1.755V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-.245S4 12 8 12z"/>
 </svg> </span>
     
-    <div class="userInfo">
+    <ul class="userInfo" data-bind="forach: user">
+        
+        <li data-bind="text: firstName, click: $parent.selectUser"></li>
+    </ul>
+        <div>
+            <user params="user: selectedUser"></user>
+        </div>
+        
+    
+        
+        
         <text data-bind="textInput: firstName"></text>
         <text data-bind="textInput: lastName"></text>
         <text data-bind="textInput: userRole"></text>
