--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -5,27 +5,32 @@
 <div data-bind="currentTemplate"></div>
 <!--<div class="border" data-bind="with: category">-->
 <!--<script type="text/html" id="new-user">-->
-    <div type="text/html id = "new-user>        
+
+    <script type="text/html" id = "add-user">        
         <div data-bind="with:selectedUser">
-          <button data-bind="click: createUser">Register</button>
         <span class="input-group-text">User details:</span>
             <input data-bind="text:firstName" class="form-control" placeholder="First Name" aria-label="Last Name" aria-describedby="register"/>
             <input data-bind="text:lastName" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="register"/>
             <input data-bind="text:email" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="register"/>
             <input data-bind="text:username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="register"/>
             <input data-bind="text:password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="register"/>
-    </div>
-    </div>
-    
-<!--</script>
+        </div>
+    </script>
 
-<script type="text/html" id="user-list">
-<button data-bind="click: createUser">Register1</button>
-    
-</script>-->
+<div type ="text/html" id = "user-list">
+    <button data-bind="click: createUser">Register</button>
+    <div>
+        <!-- foreach:user-->
+        <li data-bind="click: selectUser"> <!--$parent.-->
+           <span data-bind="text:firstName"></span>
+        </li>
+    </div>
+</div>
+
 <div>
     <button data-bind="click:signInBtn ">Sign In</button>
 </div>
+    
 <!--</div>-->
 </body>
 </html>
