--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -6,24 +6,24 @@
 <!--<div class="border" data-bind="with: category">-->
 <!--<script type="text/html" id="new-user">-->
 
-    <script type="text/html" id = "add-user">        
+    <div type="text/html" id = "add-user">        
         <div data-bind="with:selectedUser">
         <span class="input-group-text">User details:</span>
-            <input data-bind="text:firstName" class="form-control" placeholder="First Name" aria-label="Last Name" aria-describedby="register"/>
+            <input data-bind="text:firstName" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="register"/>
             <input data-bind="text:lastName" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="register"/>
             <input data-bind="text:email" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="register"/>
             <input data-bind="text:username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="register"/>
             <input data-bind="text:password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="register"/>
         </div>
-    </script>
+    </div>
 
 <div type ="text/html" id = "user-list">
     <button data-bind="click: createUser">Register</button>
     <div>
         <!-- foreach:user-->
-        <li data-bind="click: selectUser"> <!--$parent.-->
+        <ul data-bind="click: selectUser"> <!--$parent.-->
            <span data-bind="text:firstName"></span>
-        </li>
+        </ul>
     </div>
 </div>
 
