--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -12,7 +12,7 @@
     </div>
 
 <div type ="text/html" id = "login-page">
-    <button data-bind="click: createUser">Create New User</button>
+    <button type ="button" class ="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Create New User</button>
     <div>
         <!-- foreach:user
         <ul data-bind="click: selectUser"> $parent.
@@ -22,7 +22,7 @@
 </div>
 
 <div type="text/html" id="signIn-page">
-    <button data-bind="click:signInUser ">Sign In</button>
+    <button type ="button" class ="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Sign In</button>
     <div>
     </div>
     
