--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -8,4 +8,8 @@
                 </div>
             </div>
     </div>
+    <div>
+        <button>Prev</button>
+        <button>Next</button>
+    </div>
 </div>    
