--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -9,7 +9,7 @@
             </div>
     </div>
     <div>
-        <button>Prev</button>
-        <button>Next</button>
+        <button data-bind="click: showPrev">Prev</button>
+        <button data-bind="click: showNext">Next</button>
     </div>
 </div>    
