--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -1,12 +1,33 @@
 <div data-bind="template: currentTemplate"></div>
 <script type="text/html" id = "createaccount-page">        
         <div data-bind="createUserBtn">
-        <label for="createaccount-page">User Information:</label> 
-            <input data-bind="text:firstName" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="register"/>
-            <input data-bind="text:lastName" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="register"/>
-            <input data-bind="text:email" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="register"/>
-            <input data-bind="text:username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="register"/>
-            <input data-bind="text:password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="register"/>
+            <form>
+                <fieldset>
+                    <legend>Create Account</legend>
+                    <div class="form-group" data-children-count="1">
+                        <label class="col-form-label" for="firstName">First name</label>
+                        <input data-bind="text:firstName" type="text" class="form-control" placeholder="Jon" id="firstName">
+                    </div>
+                    <div class="form-group" data-children-count="1">
+                        <label class="col-form-label" for="lastName">Last name</label>
+                        <input data-bind="text:lastName" type="text" class="form-control" placeholder="Doe" id="lastName">
+                    </div>
+                    <div class="form-group" data-children-count="1">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input data-bind="text:email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="jondoe@example.com" data-kwimpalastatus="alive" data-kwimpalaid="1607009151902-2">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group" data-children-count="1">
+                        <label class="col-form-label" for="username">Username</label>
+                        <input data-bind="text:username" type="text" class="form-control" placeholder="username" id="username">
+                    </div>
+                    <div class="form-group" data-children-count="1">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input data-bind="text:password" type="password" class="form-control" id="exampleInputPassword1" placeholder="superSecretPassword123" data-kwimpalastatus="alive" data-kwimpalaid="1607009151902-0">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </fieldset>
+            </form>
         </div>
         <button data-bind="click:createAccount" type ="button" class ="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Submit</button>
         <button data-bind="click:cancelUserBtn" type ="button" class ="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Cancel</button>
