--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -1,4 +1,4 @@
-<div class="component-container, user-container">
+<div class="container, user-container">
     
     
     <span> <svg width="15%" height="15%" viewBox="0 0 16 16" class="bi bi-file-earmark-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -22,24 +22,15 @@
         <div>
             <user params="user: selectedUser"></user>
         </div>
-        
-    
-        
-        
         <text data-bind="textInput: firstName"></text>
         <text data-bind="textInput: lastName"></text>
         <text data-bind="textInput: userRole"></text>
-        
-    </div>
-    
-    <div class="histories bookmark-history">
-        
     </div>
     
     <div class="histories bookmark-history"></div>
     
+    <div class="histories bookmark-history"></div>
     
-    
-    
+
 </div>
 
