add feature to disable prev and next button

--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -9,7 +9,7 @@
             </div>
     </div>
     <div>
-        <button data-bind="click: showPrev">Prev</button>
-        <button data-bind="click: showNext">Next</button>
+        <button data-bind="click: showPrev, enable: enablePrev">Prev</button>
+        <button data-bind="click: showNext, enable: enableNext">Next</button>
     </div>
 </div>    
