add button styling

--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -12,7 +12,8 @@
             </div>
     </div>
     <div>
-        <button data-bind="click: showPrev, enable: enablePrev">Prev</button>
-        <button data-bind="click: showNext, enable: enableNext">Next</button>
+        <br>
+        <button class="btn btn-primary" data-bind="click: showPrev, enable: enablePrev">Prev</button>
+        <button class="btn btn-primary" data-bind="click: showNext, enable: enableNext">Next</button>
     </div>
 </div>    
