--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -3,17 +3,18 @@
     <div>
         Page size: <select data-bind="options: pageSizes, selectedOptions: selectedPageSize"></select>
     </div>
-    <div data-bind="foreach: titles">
-            <div class="row" data-bind="foreach: items">
-                <div class="col-4">
-                    <div class="primary_title" data-bind="text: primaryTitle"></div>
-                    <img class="img-fluid" data-bind="attr:{src: poster}" />
-                </div>
-            </div>
+    <div class="row" data-bind="foreach: titles">
+        <div class="col-4">
+            <div class="primary_title" data-bind="text: primaryTitle"></div>
+            <img class="img-fluid" data-bind="attr:{src: poster}" />
+            <button data-bind="click: $parent.selectTitle">Click</button>
+        </div>
     </div>
+    <title-details></title-details>
     <div>
         <br>
         <button class="btn btn-primary" data-bind="click: showPrev, enable: enablePrev">Prev</button>
         <button class="btn btn-primary" data-bind="click: showNext, enable: enableNext">Next</button>
+        <button data-bind="click: selectTitle">Click</button>
     </div>
 </div>    
