--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -1,22 +1,19 @@
 <div>
-    <div class="container">
+    <div class="container" data-bind="with: titles">
         <div class="row">
-            <div class="border" data-bind="with: title">
-            <div >
-                <div data-bind="text: primaryTitle"></div>
+            <div class="col-6">
+                <h2 data-bind="text: primaryTitle">Title details (<span data-bind="text: startYear"></span>)</h2>
             </div>
-        </div>
-            
             <div class="col-6">
                 <button type="button" class="btn btn-primary">Add to bookmarks +</button>
             </div>
         </div>
         <div class="row">
             <div class="col-6">
-                <img class="img-fluid" data-bind="attr:{src: title.poster}" />
+                <img class="img-fluid" data-bind="attr:{src: poster}" />
             </div>
             <div class="col-6">
-                <p>Runtime: <span data-bind="text: title.runTimeMinutes"></span> minutes</p>
+                <p>Runtime: <span data-bind="text: runTimeMinutes"></span> minutes</p>
                 <div class="container">
                     <div class="row">
                         <div class="col-6">
@@ -31,8 +28,8 @@
                 <p>Director:</p>
                 <p>Writers:</p>
                 <p>Actors:</p>
-                <p data-bind="text: title.plot"></p>
-                <p>Awards: <span data-bind="text: title.awards"></span></p>
+                <p data-bind="text: plot"></p>
+                <p>Awards: <span data-bind="text: awards"></span></p>
             </div>
         </div>
     </div>
