remove whitespace from tconst

--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -17,7 +17,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-6">
-                            <p>Rating:</p>
+                            <p>Rating: <span data-bind="text: $parent.rating()"></span></p>
                         </div>
                         <div class="col-6">
                             <button type="button" class="btn btn-primary">Rate this</button>
