--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -16,8 +16,8 @@
                 <p>Runtime: <span data-bind="text: runTimeMinutes"></span> minutes</p>
                 <div class="container">
                     <div class="row">
-                        <div class="col-6">
-                            <p>Rating: <span data-bind="text: $parent.rating()"></span></p>
+                        <div class="col-6" data-bind="with: $parent.rating">
+                            <p>Rating: <span data-bind="text: averageRating"></span></p>
                         </div>
                         <div class="col-6">
                             <button type="button" class="btn btn-primary">Rate this</button>
