add fetch genres from api

--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -28,6 +28,7 @@
                 <p>Director:</p>
                 <p>Writers:</p>
                 <p>Actors:</p>
+                <p>Genres: <span data-bind="text: $parent.genres"></span></p>
                 <p data-bind="text: plot"></p>
                 <p>Awards: <span data-bind="text: awards"></span></p>
             </div>
