add fetch data from titleprincipals

--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -2,7 +2,8 @@
     <div class="container" data-bind="with: titles">
         <div class="row">
             <div class="col-6">
-                <h2 data-bind="text: primaryTitle">Title details (<span data-bind="text: startYear"></span>)</h2>
+                <h2 data-bind="text: primaryTitle">Title details </h2> 
+                <p>(<span data-bind="text: startYear"></span>) (<span data-bind="text: titletype"></span>)</p>
             </div>
             <div class="col-6">
                 <button type="button" class="btn btn-primary">Add to bookmarks +</button>
