add click event on title div instead of btn

--- a/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleList/titleList.html
@@ -4,10 +4,9 @@
         Page size: <select data-bind="options: pageSizes, selectedOptions: selectedPageSize"></select>
     </div>
     <div class="row" data-bind="foreach: titles">
-        <div class="col-4">
+        <div class="col-4" data-bind="click: $parent.selectTitle">
             <div class="primary_title" data-bind="text: primaryTitle"></div>
             <img class="img-fluid" data-bind="attr:{src: poster}" />
-            <button data-bind="click: $parent.selectTitle">Click</button>
         </div>
     </div>
     <div>
